# staticx

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  SConstruct  VERSIONING.md  build.sh  dynversion.py  pyproject.toml  requirements.txt  run_unit_tests.sh  setup.cfg  setup.py  staticx.py
.github/workflows/: build-test.yml  publish-pypi.yml
bootloader/: SConscript  common.h  debug.h  elfutil.c  elfutil.h  error.c  error.h  extract.c  extract.h  main.c  mmap.c  mmap.h  profile.c  profile.h  util.c  util.h
docs/: Makefile  conf.py  index.rst  installation.rst  introduction.rst  requirements.txt  rpath.rst  troubleshooting.rst  usage.rst
libnssfix/: SConscript  nssfix.c  nsswitch.conf
libtar/: SConscript  VERSION  append.c  block.c  decode.c  encode.c  extract.c  handle.c  internal.h  libtar.h  output.c  util.c  wrapper.c
libtar/compat/: compat.h  strlcpy.c  strmode.c
libtar/listhash/: hash.c  list.c  listhash.h  listhash.h.in
libxz/: README.md  SConscript  xz_config.h
site_scons/: buildutils.py  conftest.py
site_scons/site_tools/: nsswitchconf.py  stubgen.py
staticx/: .gitignore  __main__.py  api.py  archive.py  assets.py  bcjfilter.py  constants.py  elf.py  errors.py  extract.py  utils.py  version.py
staticx/hooks/: __init__.py  glibc.py  pyinstaller.py
stubs/PyInstaller/archive/: readers.pyi
stubs/elftools/common/: exceptions.pyi
stubs/elftools/elf/: dynamic.pyi  elffile.pyi  gnuversions.pyi  sections.pyi  segments.pyi
test/: .gitignore  bundle-dir-prog-name.sh  busybox.sh  date.sh  funcs.sh  run_all.sh  staticx-env-vars.sh
test/musl/: app.c  run_test.sh
test/no-default-lib/: app.c  run_test.sh
test/nss-isolated/: SConscript  SConstruct  app.c  run_test.sh
test/pyinstall/: .gitignore  app.py  bad_nsswitch.conf  run_test.sh
test/pyinstall-aux-static-exec/: .gitignore  app.py  app.spec  aux.c  auxlist.py  run_test.sh
test/pyinstall-cffi/: app.py  run_test.sh
test/pyinstall-lib-runpath/: .gitignore  app.py  app.spec  libbar.c  libbar.h  libfoo.c  libfoo.h  run_test.sh  shlib.c  shlib.h
test/rpath-origin/: .gitignore  SConscript  SConstruct  SConstruct.rpath  SConstruct.runpath  app.c  libbar.c  libbar.h  libfoo.c  run_test-rpath.sh  run_test-runpath.sh  run_test.sh
test/runpath/: SConscript  SConstruct  libfoo.h  run_test.sh
test/signal-forward/: app.c  run_test.sh  test_signals.py
unittest/: test_elf.py  test_utils.py
